<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <groupId>mcmg-than00ber</groupId>
    <artifactId>mcmg</artifactId>
    <version>1.18.1</version>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- SPIGOT REMAPPED -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${project.version}-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- LIBSDISGUISES -->
        <dependency>
            <groupId>org.Libs</groupId>
            <artifactId>LibsDisguises</artifactId>
            <version>#211</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/LibsDisguises.jar</systemPath>
        </dependency>

        <!-- PROTOCOLLIB -->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>4.7.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/ProtocolLib.jar</systemPath>
        </dependency>

        <!-- ANNOTATIONS -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
        </dependency>
    </dependencies>

    <build>
        <directory>/Users/noahgreff/Documents/repos/mc/servers/spigot/1.18.1/plugins</directory>
    </build>

</project>